# MyGAL

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: MyGALConfig.cmake.in
doc/: Doxyfile  mainpage.h
examples/: CMakeLists.txt  main.cpp
include/: Arc.h  Beachline.h  Box.h  Diagram.h  Event.h  FortuneAlgorithm.h  PriorityQueue.h  Triangulation.h  Vector2.h  VoronoiDiagram.h
include/MyGAL/: Arc.h  Beachline.h  Box.h  Diagram.h  Event.h  FortuneAlgorithm.h  PriorityQueue.h  Triangulation.h  Vector2.h  util.h
src/: Beachline.cpp  Box.cpp  Event.cpp  FortuneAlgorithm.cpp  Vector2.cpp  VoronoiDiagram.cpp  main.cpp
tests/: CMakeLists.txt  circle.cpp  common.h  grid.cpp  line.cpp  random.cpp
